--- a/build.targets
+++ b/build.targets
@@ -1,7 +1,7 @@
-YOUTUBE_ROOT="false"
+YOUTUBE_ROOT="true"
 YOUTUBE_NONROOT="true"
-YTMUSIC_ROOT="false"
-YTMUSIC_NONROOT="false"
-TIKTOK_NONROOT="false"
-TWITCH_NONROOT="false"
+YTMUSIC_ROOT="true"
+YTMUSIC_NONROOT="true"
+TIKTOK_NONROOT="true"
+TWITCH_NONROOT="true"
 EXTENDED_SUPPORT="false"
