--- a/build.targets
+++ b/build.targets
@@ -2,6 +2,6 @@ YOUTUBE_ROOT="true"
 YOUTUBE_NONROOT="true"
 YTMUSIC_ROOT="true"
 YTMUSIC_NONROOT="true"
-TIKTOK_NONROOT="true"
-TWITCH_NONROOT="true"
+TIKTOK_NONROOT="false"
+TWITCH_NONROOT="false"
 EXTENDED_SUPPORT="false"
